# korean-number

./: LICENSE  README.md  addunit.py  kor2num.py  kor2num_func.py  kor2number.py  kor_utils.py  num2finkor.py  num2kor.py  pyproject.toml
korean-number/: __init__.py
korean_number/: __init__.py  addunit.py  kor2num.py  kor_constants.py  num2finkor.py  num2kor.py  split_by_4.py
