[project]
name = "korean_number"
version = "1.0.2"
description = "숫자와 한글 숫자 변환 파이썬 패키지"
authors = [{name="yegang hwang", email="yegang@yegangs.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"